[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/EventPanel.gd" id="1"]

[node name="EventPanel" type="PanelContainer"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Event description"

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]

